Bug 644277 - Fix for titlebar right-click system menu missing entries added by 3rd party software. r=neil.